<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.martinbg.androidcryptocurrencies.db.relation.CurrencyAndFavourite" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:clickable="true"
        android:focusable="true"
        android:padding="12dp">

        <ImageView
            android:id="@+id/btn_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/crypto_currency_btn_like_image_description"
            android:src="@android:drawable/star_big_off"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_flag"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/crypto_currency_logo_image_description"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.3"
            tools:src="@android:drawable/star_big_off" />

        <TextView
            android:id="@+id/tv_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/crypto_currency_name_label"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/iv_flag"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{model.currency.name}"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_name_label"
            app:layout_constraintTop_toBottomOf="@+id/tv_name_label"
            tools:text="Name" />

        <TextView
            android:id="@+id/tv_currency_symbol_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/crypto_currency_symbol_label"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/tv_currency_symbol"
            app:layout_constraintStart_toEndOf="@+id/iv_flag" />

        <TextView
            android:id="@+id/tv_currency_symbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{model.currency.symbol}"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_flag"
            app:layout_constraintStart_toStartOf="@+id/tv_currency_symbol_label"
            tools:text="Symbol" />

        <TextView
            android:id="@+id/tv_price_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/crypto_currency_price_label"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_flag" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{model.currency.currentPrice.toString()}"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/tv_price_label"
            app:layout_constraintTop_toBottomOf="@id/tv_price_label"
            tools:text="Price" />

        <TextView
            android:id="@+id/tv_market_cap_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/crypto_currency_market_cap_label"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_price" />

        <TextView
            android:id="@+id/tv_market_cap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{String.valueOf(model.currency.marketCap)}"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/tv_market_cap_label"
            app:layout_constraintTop_toBottomOf="@id/tv_market_cap_label"
            tools:text="Market cap" />

        <TextView
            android:id="@+id/tv_highest_price_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/crypto_currency_highest_value_label"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_market_cap" />

        <TextView
            android:id="@+id/tv_highest_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{model.currency.high24h.toString()}"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/tv_highest_price_label"
            app:layout_constraintTop_toBottomOf="@id/tv_highest_price_label"
            tools:text="Highest value for last 24h" />

        <TextView
            android:id="@+id/tv_percentage_price_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/crypto_currency_percentage_percentage_price_change_label"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_highest_price" />

        <TextView
            android:id="@+id/tv_percentage_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{String.valueOf(model.currency.priceChangePercentage24h)}"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_percentage_price_label"
            tools:text="0.00" />

        <TextView
            android:id="@+id/tv_percentage_market_cap_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/crypto_currency_percentage_percentage_market_cap_change_label"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_percentage_price" />

        <TextView
            android:id="@+id/tv_percentage_market_cap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{String.valueOf(model.currency.marketCapChangePercentage24h)}"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_percentage_market_cap_label"
            tools:text="0.00" />

        <TextView
            android:id="@+id/tv_lowest_price_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/crypto_currency_lowest_value_label"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_percentage_market_cap" />

        <TextView
            android:id="@+id/tv_lowest_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{model.currency.low24h.toString()}"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_lowest_price_label"
            tools:text="0.00" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>