<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="name"
            type="String" />

        <variable
            name="symbol"
            type="String" />

        <variable
            name="price"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">

        <ImageView
            android:id="@+id/iv_flag"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/crypto_currency_logo_image_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@android:drawable/star_big_off" />

        <TextView
            android:id="@+id/tv_currency_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@{name}"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/iv_flag"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Currency" />

        <TextView
            android:id="@+id/tv_currency_symbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@{symbol}"
            android:textAllCaps="true"
            android:textColor="#000"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_flag"
            app:layout_constraintStart_toEndOf="@id/iv_flag"
            app:layout_constraintTop_toTopOf="@+id/iv_flag"
            tools:text="Symbol" />


        <TextView
            android:id="@+id/tv_currency_current_price_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/crypto_currency_price_label"
            android:textColor="#000"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/iv_flag"
            app:layout_constraintStart_toEndOf="@id/iv_flag" />

        <TextView
            android:id="@+id/tv_currency_current_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{price}"
            android:textColor="#000"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/tv_currency_current_price_label"
            app:layout_constraintTop_toTopOf="@id/tv_currency_current_price_label"
            tools:text="Price" />

        <ImageView
            android:id="@+id/iv_liked"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/crypto_currency_btn_like_image_description"
            android:src="@android:drawable/star_big_on"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>